[project]
name = "typegraph3"
version = "0.0.1"
description = "Type Auto Switch"
authors = [
    {name = "luxuncang", email = "luxuncang@qq.com"},
]
dependencies = [
    "typing-inspect>=0.9.0",
    "networkx>=3.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]

test = "python -m unittest"
dev = "python tests/dev.py"